# bitbox02-bt-firmware

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  jlink.gdb
.cargo/: config.toml
.ci/: ci
.github/workflows/: ci.yml
bitbox02-bt/: Cargo.toml  Makefile  build.rs  jlink-debug.gdb  jlink-dev.gdb  jlink-release.gdb  jlink.gdb  memory.x
bitbox02-bt/.cargo/: config.toml  runner-debug.toml  runner-release.toml
bitbox02-bt/src/: app.rs  app_impl.rs  ble.rs  main.rs  peripherals.rs
bitbox02-bt/src/ble/: char_handlers.rs  config.rs  user_peripheral.rs
da14531-sdk-linker/: Cargo.toml
da14531-sdk-linker/src/: main.rs
scripts/: dockerenv.sh
